# Population

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  main.cpp  population.pri  population.pro  populationconfig.pri  populationsrc.pri  populationsrctemp.pri  populationtemp.pro  tempmain.cpp  testblas.cpp
cmake/: FindCUDA.cmake  FindFFMPEG.cmake  FindOPENGL.cmake  FindOPENMP.cmake  FindTHREAD.cmake  FindVLC.cmake  FindX11.cmake  PopulationConfig.cmake.in  popUtils.cmake
cmake/templates/: popconfig.h.in
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Population_documentation.h  make.bat
doc/dox/: Filtering.dox  architecture.dox  convolution.dox  fast3dprototyping.dox  firststep.dox  frequentlyquestions.dox  gallery.dox  grain_segmentation.dox  imagebasic.dox  imageinout.dox  installother.dox  installqtcreator.dox  installvisualstudio.dox  iterator_matrix.dox  license.dox  neightborhood.dox  paradigm.dox  philosophy.dox  python.dox  recursive.dox  representation.dox  segmentation.dox  segmentation2.dox  segmentation3.dox  structurecode.dox  templateprogramming.dox  visualisation2d.dox  visualisation3d.dox
doc/image/: DLA.eps  Lena.pgm  LenaRot.pgm  PointData.fig  SAVE.fig  SphereOfSphere.eps  SphereOfSphere.fig  SphereOfSphere.fig.bak  architecture.fig.bak  comparison.eps  granulo.eps  granulo2.eps  grid2.eps  grid2.fig  grid2.fig.bak  iex.pgm  irm.pgm  outil.pgm  vector.eps  vector.fig  vector.fig.bak  workflow.fig  workflow.fig.bak
file/: handwrittendigitneuralnetwork.xml
image/: CTG.pgm  SLB_AU130000.pgm
image/meniscus/: 900-959_000.pgm  900-959_001.pgm  900-959_002.pgm  900-959_003.pgm  900-959_004.pgm  900-959_005.pgm  900-959_006.pgm  900-959_007.pgm  900-959_008.pgm  900-959_009.pgm  900-959_010.pgm  900-959_011.pgm  900-959_012.pgm  900-959_013.pgm  900-959_014.pgm  900-959_015.pgm  900-959_016.pgm  900-959_017.pgm  900-959_018.pgm  900-959_019.pgm  900-959_020.pgm  900-959_021.pgm  900-959_022.pgm  900-959_023.pgm  900-959_024.pgm  900-959_025.pgm  900-959_026.pgm  900-959_027.pgm  900-959_028.pgm  900-959_029.pgm  900-959_030.pgm  900-959_031.pgm  900-959_032.pgm  900-959_033.pgm  900-959_034.pgm  900-959_035.pgm  900-959_036.pgm  900-959_037.pgm  900-959_038.pgm  900-959_039.pgm  (+20 more)
include/: Population.h  PopulationConfig.h
include/algorithm/: Analysis.h  AnalysisAdvanced.h  Application.h  Arithmetic.h  Convertor.h  Draw.h  Feature.h  ForEachFunctor.h  FunctionProcedureFunctorF.h  FunctionProcedureFunctorFOptimized.h  GeometricalTransformation.h  LinearAlgebra.h  PDE.h  PDEAdvanced.h  Processing.h  ProcessingAdvanced.h  ProcessingVideo.h  RandomGeometry.h  Representation.h  Statistics.h  Visualization.h  processingtensor.h
include/data/3d/: GLFigure.h
include/data/GP/: CartesianProduct.h  Dynamic2Static.h  EmptyType.h  Factory.h  LokiTypeInfo.h  NullType.h  Singleton.h  TTypeTraits.h  Type2Id.h  TypeTraitsTemplateTemplate.h  Typelist.h
include/data/distribution/: Distribution.h  DistributionAnalytic.h  DistributionArithmetic.h  DistributionFromDataStructure.h  DistributionMultiVariate.h  DistributionMultiVariateArithmetic.h  DistributionMultiVariateFromDataStructure.h
include/data/functor/: FunctorF.h  FunctorMatN.h  FunctorPDE.h
include/data/germgrain/: Germ.h  GermGrain.h
include/data/mat/: Mat2x.h  MatN.h  MatNBoundaryCondition.h  MatNDisplay.h  MatNInOut.h  MatNInOutImpl.h  MatNIteratorE.h  MatNListType.h
include/data/notstable/: Ransac.h  (+8 more)
include/dependency/: CImg.h  ConvertorCImg.h  ConvertorOpenCV.h  ConvertorQImage.h  MTRand.h  MatNDisplayCImg.h  VideoFFMPEG.h  VideoVLC.h  fpconfig.hh  fptypes.hh  log.h  pugixml.hpp  tinythread.h
include/tensor/: tensor.h
other/C++/: CMakeLists.txt  main.cpp  population.pro  populationall.pro  populationall.sln  populationsharedlibrarytest.pro  populationsharedlibrarytest.vcxproj
other/CUDA/: CMakeLists.txt  CUDA_test.cpp  c_neural_net.cu  c_neural_net.h  cuda_test.cu  cuda_test.h  microtime.h  neural_net_test.cc  neural_net_test.h  popcuda.cc  popcuda.h
other/article/: CMakeLists.txt  amoeba.cpp  elementarydecomposition.cpp  germgrain.cpp  germgrain.py
other/article/germgrain/: germgrain.cpp  germgrain.pro
other/cameleon/: BindingCameleon.pri  BindingCameleonInclude.pri  PlotGraph.cpp  PlotGraph.h  PopulationBindingCameleon.pri  PopulationBindingCameleon.pro  PopulationDictionnary.cpp  PopulationDictionnary.h  populationplugin.cpp  populationplugin.h
other/java/: PopulationJava.pro
other/python/: CMakeLists.txt  PDE.i  analysis.i  convertor.i  data.i  draw.i  geometricaltransformation.i  population.i  populationfull.i  populationsmall.i  processing.i  randomgeometry.i  representation.i  visualization.i
other/python/SWIG/: PDE.i  analysis.i  convertor.i  data.i  draw.i  geometricaltransformation.i  populationfull.i  populationsmall.i  processing.i  randomgeometry.i  representation.i  vision.i  visualization.i
other/python/example/: testPIL.py
other/temp/: CMakeLists.txt  Cluster.cpp  Cluster.h  NeuralNetworkOld.cpp  NeuralNetworkOld.h  main.cpp  neuralnetworkmatrix.h  populationconfigtemp.pri  populationsrctemp.pri  populationtemp.pro  treillisnumeric.cpp  treillisnumeric.h
other/test/: CMakeLists.txt  adaboost.cpp  poptest.h  runtest.cpp
other/tutorial/: CMakeLists.txt  PatternRecognitionMachineLearningBishopChapter1.cpp  PoissonNonUniform.cpp  basic_definition.cpp  elementarydecomposition.cpp  fastprototyping3d.cpp  firststep.cpp  firststep.py  iterator_matrix.cpp  loadsave.cpp  segmentation.cpp  segmentation.py  segmentation2.cpp  segmentation2.py  segmentation3.cpp  segmentation3.py  template_programming.cpp  templatecoding.cpp  visualization2d.cpp  visualization2d.py  visualization3d.cpp  visualization3d.py
src/algorithm/: GeometricalTransformation.cpp  LinearAlgebra.cpp  RandomGeometry.cpp  Statistics.cpp  Visualization.cpp  processingtensor.cpp
src/dependency/: ConvertorOpenCV.cpp  ConvertorQImage.cpp  MTRand.cpp  MatNDisplayCImg.cpp  VideoFFMPEG.cpp  VideoVLC.cpp  fparser.cpp  jpgd.cpp  jpge.cpp  lodepng.cpp  pugixml.cpp  tinythread.cpp
src/tensor/: tensor.cpp
(+690 files in other folders)
