FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_SWIG_OUTDIR ${POPULATION_LIB_DIR})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_SWIG")
SET(CMAKE_SWIG_FLAGS "-DHAVE_SWIG")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${POPULATION_LIB_DIR})
SET_SOURCE_FILES_PROPERTIES(population.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(population python population.i ${POPULATION_SOURCES})
SWIG_LINK_LIBRARIES(population ${PYTHON_LIBRARIES} ${POPULATION_LIBRARY})



